--- a/assets/admin_css/blog_preview.css
+++ b/assets/admin_css/blog_preview.css
@@ -1,60 +1,72 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-body {
-    font-family: Arial, sans-serif;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    margin-left: 200px;
-    padding: 20px;
-    background-color: #f4f4f4;
-}
 .container {
+    width: 80%;
+    margin: 20px auto;
+    padding: 20px;
+    gap: 10px;
+    border-radius: 10px;
     display: flex;
-    gap: 30px;
-    max-width: 1000px;
-    width: 100%;
+    margin-top: 200px;
 }
-.form-container, .preview-container {
+
+.form-container,
+.preview-container {
     flex: 1;
     background: white;
+    max-width: 700px;
     padding: 20px;
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
+
 .input {
     display: flex;
     flex-direction: column;
     gap: 10px;
     margin-bottom: 15px;
 }
-.input input, .input textarea {
+
+.input input,
+.input textarea {
     padding: 10px;
     border: 1px solid #ccc;
     border-radius: 5px;
     width: 100%;
     font-size: 16px;
 }
+
 .description-limit {
     font-size: 12px;
     color: red;
     display: none;
 }
+
+.create-btn{
+    padding: 5px 10px;
+    background-color: var(--primary-color);
+    color: black;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.2s ease-in-out;
+}
+
+.create-btn:hover{
+    background-color: orangered;
+}
+
 .blog-preview {
     position: relative;
     border-radius: 10px;
     overflow: hidden;
     box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.2);
 }
+
 .blog-preview img {
     width: 100%;
     height: 250px;
     object-fit: cover;
 }
+
 .date-badge {
     position: absolute;
     top: 225px;
@@ -65,18 +77,24 @@ body {
     border-radius: 5px;
     font-weight: bold;
 }
+
 .content {
     padding: 15px;
     background: white;
+    word-wrap: break-word;
 }
+
 .content h1 {
     font-size: 20px;
     margin-bottom: 10px;
 }
+
 .content p {
     font-size: 14px;
+    word-wrap: break-word;
     color: #555;
 }
+
 .info {
     display: flex;
     gap: 10px;
@@ -86,18 +104,10 @@ body {
 
 @media (max-width: 1300px) {
     .container {
-        margin-top: 150px;
+        margin-top: 100px;
         flex-direction: column;
-        width: 70%;
-        position: absolute;
-        right: 0px;
-    }
-}
-
-@media (max-width: 1500px) {
-    .container {
-        width: 70%;
-        position: absolute;
-        right: 0px;
+        justify-content: center;
+        align-items: center;
+        width: 90%;
     }
 }
